# git.symphony

./: .gitignore  GITTY_DICTIONARY.md  QUAD_MODEL_ARCHITECTURE.md  README.md  SOROKIN_DICTIONARY_DRAFT.md  dictionary_learner.py  episodes.py  frequency.py  pyproject.toml  rendergit_adapter.py  symphony.py  test_quad_madness.py  test_search_fix.py  visualize.py
llama_np/: sentencepiece_wrapper.py
tests/: example_interaction.md  test_dictionary_evolution.py  test_episodes_madness.py  test_final_madness.py  test_madness.py  test_multi_repo.py  test_quad_madness.py  test_search_fix.py  test_sentencepiece.py  test_symphony_basic.py
