[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-symphony"
version = "0.1.0"
description = "A poetic git repository explorer that navigates code histories through dreams, resonance, and entropy"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ariannamethod"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
symphony = "symphony:main"

[project.urls]
Homepage = "https://github.com/ariannamethod/git.symphony"
Repository = "https://github.com/ariannamethod/git.symphony"
