[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-symphony"
version = "0.1.0"
description = "A poetic git repository explorer that navigates code histories through dreams, resonance, and entropy"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ariannamethod"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",  # Core dependency: LLaMA runs on pure NumPy! 🔥
]

[project.optional-dependencies]
# Optional: PyTorch for LSTM model (fallback #3 in quad-model hierarchy)
lstm = [
    "torch>=2.0.0",
]
# Optional: SentencePiece for BPE tokenization (future feature)
tokenizer = [
    "sentencepiece>=0.1.99",
]
# All optional features
all = [
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
symphony = "symphony:main"

[project.urls]
Homepage = "https://github.com/ariannamethod/git.symphony"
Repository = "https://github.com/ariannamethod/git.symphony"
